Welcome Screen: Fix alignment of paragraphs.
Fixes #7212 (trunk).

git-svn-id: https://buddypress.svn.wordpress.org/trunk@10988 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -135,6 +135,7 @@ TABLE OF CONTENTS:
 
 .index_page_bp-about .bp-feature p,
 .dashboard_page_bp-about .bp-feature p {
+	float: left;
 	font-size: 1.15em;
 	width: 47%;
 }
